Fix contrast error

--- a/webapp/src/components/topRightMenu/ranking/Ranking.css
+++ b/webapp/src/components/topRightMenu/ranking/Ranking.css
@@ -36,7 +36,7 @@
 .ranking-tab-btn {
   border: 0.0625rem solid rgba(255, 255, 255, 0.1);
   color: #bbb; 
-  background: rgba(255, 255, 255, 0.08);
+  background: rgba(255, 255, 255, 0);
   padding: 0.6rem 1.8rem;
   border-radius: 0.4rem;
   cursor: pointer;
